// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TDEEGraph /> generic regression test - no data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        data-testid="wrapper-svg"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 10 10"
      >
        <title>
          Weightloss Statistics
        </title>
        <rect
          fill="transparent"
          height="20"
          stroke="#e41a1c"
          width="20"
          x="-200"
          y="3"
        />
        <text
          fill="#e41a1c"
          x="-170"
          y="18"
        >
          Computed Calories
        </text>
        <rect
          fill="#377eb8"
          height="20"
          stroke="#377eb8"
          width="20"
          x="-200"
          y="33"
        />
        <text
          fill="#377eb8"
          x="-170"
          y="48"
        >
          Calories
        </text>
        <path
          fill="none"
          pointer-events="none"
          stroke="#377eb8"
          stroke-width="2"
        />
        <rect
          fill="#4daf4a"
          height="20"
          stroke="#4daf4a"
          width="20"
          x="-200"
          y="63"
        />
        <text
          fill="#4daf4a"
          x="-170"
          y="78"
        >
          Weight (Kg)
        </text>
        <path
          fill="none"
          pointer-events="none"
          stroke="#4daf4a"
          stroke-width="2"
        />
        <rect
          fill="transparent"
          height="20"
          stroke="#984ea3"
          width="20"
          x="-200"
          y="93"
        />
        <text
          fill="#984ea3"
          x="-170"
          y="108"
        >
          checked in BMI
        </text>
        <lineargradient
          gradientUnits="userSpaceOnUse"
          id="grad"
          x1="0%"
          x2="0%"
          y1="0%"
          y2="100%"
        >
          <stop
            offset="0"
            stop-color="red"
          />
          <stop
            offset="-1.2517500000000001"
            stop-color="red"
          />
          <stop
            offset="-1.2517500000000001"
            stop-color="green"
          />
          <stop
            offset="1"
            stop-color="green"
          />
        </lineargradient>
        <rect
          fill="#ff7f00"
          height="20"
          stroke="#ff7f00"
          width="20"
          x="-200"
          y="123"
        />
        <text
          fill="#ff7f00"
          x="-170"
          y="138"
        >
          Avg over 21 days
        </text>
        <path
          fill="none"
          pointer-events="none"
          stroke="#ff7f00"
          stroke-width="2"
        />
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, -30)"
        >
          <path
            class="domain"
            d="M20.5,6V0.5H-249.5V6"
            stroke="currentColor"
          />
        </g>
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
          transform="translate(20, 0)"
        >
          <path
            class="domain"
            d="M-6,-29.5H0.5V5.5H-6"
            stroke="currentColor"
          />
        </g>
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="start"
          transform="translate(-250, 0)"
        >
          <path
            class="domain"
            d="M6,-29.5H0.5V5.5H6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-29.5)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-26.583333333333332)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-23.666666666666668)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              1,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-20.75)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              1,500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-17.833333333333336)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              2,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-14.916666666666666)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              2,500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-12)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              3,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-9.083333333333332)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              3,500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-6.166666666666668)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              4,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-3.25)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              4,500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-0.33333333333333215)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              5,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,2.5833333333333286)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              5,500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,5.5)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              6,000
            </text>
          </g>
        </g>
        <foreignobject
          height="150"
          width="250"
          x="-203"
          y="150"
        >
          <form>
            <label
              for="averageOver"
              style="display: block;"
            >
              <input
                data-testid="averageSlider"
                max="28"
                min="3"
                name="averageOver"
                type="range"
                value="21"
              />
            </label>
          </form>
        </foreignobject>
        <path
          d="MNaN,-30 NaN,0"
          pointer-events="none"
          stroke="black"
          stroke-width="1px"
        />
        <foreignobject
          height="150"
          width="-270"
          x="20"
          y="-10"
        >
          <form>
            <input
              max="-1"
              min="0"
              style="width: -272px;"
              type="range"
              value="0"
            />
          </form>
        </foreignobject>
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      data-testid="wrapper-svg"
      preserveAspectRatio="xMinYMin meet"
      viewBox="0 0 10 10"
    >
      <title>
        Weightloss Statistics
      </title>
      <rect
        fill="transparent"
        height="20"
        stroke="#e41a1c"
        width="20"
        x="-200"
        y="3"
      />
      <text
        fill="#e41a1c"
        x="-170"
        y="18"
      >
        Computed Calories
      </text>
      <rect
        fill="#377eb8"
        height="20"
        stroke="#377eb8"
        width="20"
        x="-200"
        y="33"
      />
      <text
        fill="#377eb8"
        x="-170"
        y="48"
      >
        Calories
      </text>
      <path
        fill="none"
        pointer-events="none"
        stroke="#377eb8"
        stroke-width="2"
      />
      <rect
        fill="#4daf4a"
        height="20"
        stroke="#4daf4a"
        width="20"
        x="-200"
        y="63"
      />
      <text
        fill="#4daf4a"
        x="-170"
        y="78"
      >
        Weight (Kg)
      </text>
      <path
        fill="none"
        pointer-events="none"
        stroke="#4daf4a"
        stroke-width="2"
      />
      <rect
        fill="transparent"
        height="20"
        stroke="#984ea3"
        width="20"
        x="-200"
        y="93"
      />
      <text
        fill="#984ea3"
        x="-170"
        y="108"
      >
        checked in BMI
      </text>
      <lineargradient
        gradientUnits="userSpaceOnUse"
        id="grad"
        x1="0%"
        x2="0%"
        y1="0%"
        y2="100%"
      >
        <stop
          offset="0"
          stop-color="red"
        />
        <stop
          offset="-1.2517500000000001"
          stop-color="red"
        />
        <stop
          offset="-1.2517500000000001"
          stop-color="green"
        />
        <stop
          offset="1"
          stop-color="green"
        />
      </lineargradient>
      <rect
        fill="#ff7f00"
        height="20"
        stroke="#ff7f00"
        width="20"
        x="-200"
        y="123"
      />
      <text
        fill="#ff7f00"
        x="-170"
        y="138"
      >
        Avg over 21 days
      </text>
      <path
        fill="none"
        pointer-events="none"
        stroke="#ff7f00"
        stroke-width="2"
      />
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(0, -30)"
      >
        <path
          class="domain"
          d="M20.5,6V0.5H-249.5V6"
          stroke="currentColor"
        />
      </g>
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(20, 0)"
      >
        <path
          class="domain"
          d="M-6,-29.5H0.5V5.5H-6"
          stroke="currentColor"
        />
      </g>
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="start"
        transform="translate(-250, 0)"
      >
        <path
          class="domain"
          d="M6,-29.5H0.5V5.5H6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-29.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-26.583333333333332)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            500
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-23.666666666666668)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            1,000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-20.75)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            1,500
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-17.833333333333336)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            2,000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-14.916666666666666)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            2,500
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-12)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            3,000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-9.083333333333332)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            3,500
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-6.166666666666668)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            4,000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-3.25)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            4,500
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-0.33333333333333215)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            5,000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,2.5833333333333286)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            5,500
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,5.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            6,000
          </text>
        </g>
      </g>
      <foreignobject
        height="150"
        width="250"
        x="-203"
        y="150"
      >
        <form>
          <label
            for="averageOver"
            style="display: block;"
          >
            <input
              data-testid="averageSlider"
              max="28"
              min="3"
              name="averageOver"
              type="range"
              value="21"
            />
          </label>
        </form>
      </foreignobject>
      <path
        d="MNaN,-30 NaN,0"
        pointer-events="none"
        stroke="black"
        stroke-width="1px"
      />
      <foreignobject
        height="150"
        width="-270"
        x="20"
        y="-10"
      >
        <form>
          <input
            max="-1"
            min="0"
            style="width: -272px;"
            type="range"
            value="0"
          />
        </form>
      </foreignobject>
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<TDEEGraph /> generic regression test - with data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        data-testid="wrapper-svg"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 10 10"
      >
        <title>
          Weightloss Statistics
        </title>
        <rect
          fill="transparent"
          height="20"
          stroke="#e41a1c"
          width="20"
          x="-200"
          y="3"
        />
        <text
          fill="#e41a1c"
          x="-170"
          y="18"
        >
          Computed Calories
        </text>
        <rect
          fill="#377eb8"
          height="20"
          stroke="#377eb8"
          width="20"
          x="-200"
          y="33"
        />
        <text
          fill="#377eb8"
          x="-170"
          y="48"
        >
          Calories
        </text>
        <path
          fill="none"
          pointer-events="none"
          stroke="#377eb8"
          stroke-width="2"
        />
        <rect
          fill="#4daf4a"
          height="20"
          stroke="#4daf4a"
          width="20"
          x="-200"
          y="63"
        />
        <text
          fill="#4daf4a"
          x="-170"
          y="78"
        >
          Weight (Kg)
           - 8
        </text>
        <path
          d="M20,-0.8333333333333321L-250,-24.166666666666668"
          fill="none"
          pointer-events="none"
          stroke="#4daf4a"
          stroke-width="2"
        />
        <circle
          cx="-250"
          cy="-24.166666666666668"
          fill="none"
          r="7"
          stroke="#4daf4a"
          stroke-width="2"
        />
        <rect
          fill="transparent"
          height="20"
          stroke="#984ea3"
          width="20"
          x="-200"
          y="93"
        />
        <text
          fill="#984ea3"
          x="-170"
          y="108"
        >
          checked in BMI
        </text>
        <lineargradient
          gradientUnits="userSpaceOnUse"
          id="grad"
          x1="0%"
          x2="0%"
          y1="0%"
          y2="100%"
        >
          <stop
            offset="0"
            stop-color="red"
          />
          <stop
            offset="-1.2517500000000001"
            stop-color="red"
          />
          <stop
            offset="-1.2517500000000001"
            stop-color="green"
          />
          <stop
            offset="1"
            stop-color="green"
          />
        </lineargradient>
        <rect
          fill="#ff7f00"
          height="20"
          stroke="#ff7f00"
          width="20"
          x="-200"
          y="123"
        />
        <text
          fill="#ff7f00"
          x="-170"
          y="138"
        >
          Avg over 21 days
           - 9
        </text>
        <path
          d="M20,-0.8333333333333321L-250,-12.5"
          fill="none"
          pointer-events="none"
          stroke="#ff7f00"
          stroke-width="2"
        />
        <circle
          cx="-250"
          cy="-12.5"
          fill="none"
          r="7"
          stroke="#ff7f00"
          stroke-width="2"
        />
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, -30)"
        >
          <path
            class="domain"
            d="M20.5,6V0.5H-249.5V6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(20.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              01 AM
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-6.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              .001
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-33.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              .002
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-60.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              .003
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-87.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              .004
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-114.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              .005
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-141.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              .006
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-168.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              .007
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-195.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              .008
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-222.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              .009
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-249.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              .010
            </text>
          </g>
        </g>
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
          transform="translate(20, 0)"
        >
          <path
            class="domain"
            d="M-6,-29.5H0.5V5.5H-6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-28.333333333333336)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              7.6
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-26.000000000000004)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              7.8
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-23.666666666666668)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              8.0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-21.333333333333343)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              8.2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-18.999999999999996)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              8.4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-16.66666666666667)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              8.6
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-14.333333333333325)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              8.8
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-12)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              9.0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-9.666666666666675)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              9.2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-7.333333333333332)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              9.4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-5.000000000000007)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              9.6
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-2.666666666666657)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              9.8
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-0.33333333333333215)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              10.0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,1.999999999999993)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              10.2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,4.333333333333336)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-9"
            >
              10.4
            </text>
          </g>
        </g>
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="start"
          transform="translate(-250, 0)"
        >
          <path
            class="domain"
            d="M6,-29.5H0.5V5.5H6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-29.5)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-26.583333333333332)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-23.666666666666668)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              1,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-20.75)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              1,500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-17.833333333333336)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              2,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-14.916666666666666)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              2,500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-12)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              3,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-9.083333333333332)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              3,500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-6.166666666666668)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              4,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-3.25)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              4,500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,-0.33333333333333215)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              5,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,2.5833333333333286)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              5,500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,5.5)"
          >
            <line
              stroke="currentColor"
              x2="6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="9"
            >
              6,000
            </text>
          </g>
        </g>
        <foreignobject
          height="150"
          width="250"
          x="-203"
          y="150"
        >
          <form>
            <label
              for="averageOver"
              style="display: block;"
            >
              <input
                data-testid="averageSlider"
                max="28"
                min="3"
                name="averageOver"
                type="range"
                value="21"
              />
            </label>
          </form>
        </foreignobject>
        <path
          d="M-250,-30 -250,0"
          pointer-events="none"
          stroke="black"
          stroke-width="1px"
        />
        <foreignobject
          height="150"
          width="-270"
          x="20"
          y="-10"
        >
          <form>
            <input
              max="1"
              min="0"
              style="width: -272px;"
              type="range"
              value="1"
            />
          </form>
        </foreignobject>
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      data-testid="wrapper-svg"
      preserveAspectRatio="xMinYMin meet"
      viewBox="0 0 10 10"
    >
      <title>
        Weightloss Statistics
      </title>
      <rect
        fill="transparent"
        height="20"
        stroke="#e41a1c"
        width="20"
        x="-200"
        y="3"
      />
      <text
        fill="#e41a1c"
        x="-170"
        y="18"
      >
        Computed Calories
      </text>
      <rect
        fill="#377eb8"
        height="20"
        stroke="#377eb8"
        width="20"
        x="-200"
        y="33"
      />
      <text
        fill="#377eb8"
        x="-170"
        y="48"
      >
        Calories
      </text>
      <path
        fill="none"
        pointer-events="none"
        stroke="#377eb8"
        stroke-width="2"
      />
      <rect
        fill="#4daf4a"
        height="20"
        stroke="#4daf4a"
        width="20"
        x="-200"
        y="63"
      />
      <text
        fill="#4daf4a"
        x="-170"
        y="78"
      >
        Weight (Kg)
         - 8
      </text>
      <path
        d="M20,-0.8333333333333321L-250,-24.166666666666668"
        fill="none"
        pointer-events="none"
        stroke="#4daf4a"
        stroke-width="2"
      />
      <circle
        cx="-250"
        cy="-24.166666666666668"
        fill="none"
        r="7"
        stroke="#4daf4a"
        stroke-width="2"
      />
      <rect
        fill="transparent"
        height="20"
        stroke="#984ea3"
        width="20"
        x="-200"
        y="93"
      />
      <text
        fill="#984ea3"
        x="-170"
        y="108"
      >
        checked in BMI
      </text>
      <lineargradient
        gradientUnits="userSpaceOnUse"
        id="grad"
        x1="0%"
        x2="0%"
        y1="0%"
        y2="100%"
      >
        <stop
          offset="0"
          stop-color="red"
        />
        <stop
          offset="-1.2517500000000001"
          stop-color="red"
        />
        <stop
          offset="-1.2517500000000001"
          stop-color="green"
        />
        <stop
          offset="1"
          stop-color="green"
        />
      </lineargradient>
      <rect
        fill="#ff7f00"
        height="20"
        stroke="#ff7f00"
        width="20"
        x="-200"
        y="123"
      />
      <text
        fill="#ff7f00"
        x="-170"
        y="138"
      >
        Avg over 21 days
         - 9
      </text>
      <path
        d="M20,-0.8333333333333321L-250,-12.5"
        fill="none"
        pointer-events="none"
        stroke="#ff7f00"
        stroke-width="2"
      />
      <circle
        cx="-250"
        cy="-12.5"
        fill="none"
        r="7"
        stroke="#ff7f00"
        stroke-width="2"
      />
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(0, -30)"
      >
        <path
          class="domain"
          d="M20.5,6V0.5H-249.5V6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(20.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            01 AM
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-6.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            .001
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-33.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            .002
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-60.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            .003
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-87.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            .004
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-114.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            .005
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-141.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            .006
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-168.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            .007
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-195.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            .008
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-222.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            .009
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-249.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            .010
          </text>
        </g>
      </g>
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(20, 0)"
      >
        <path
          class="domain"
          d="M-6,-29.5H0.5V5.5H-6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-28.333333333333336)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            7.6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-26.000000000000004)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            7.8
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-23.666666666666668)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            8.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-21.333333333333343)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            8.2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-18.999999999999996)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            8.4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-16.66666666666667)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            8.6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-14.333333333333325)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            8.8
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-12)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            9.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-9.666666666666675)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            9.2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-7.333333333333332)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            9.4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-5.000000000000007)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            9.6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-2.666666666666657)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            9.8
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-0.33333333333333215)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            10.0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,1.999999999999993)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            10.2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,4.333333333333336)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            10.4
          </text>
        </g>
      </g>
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="start"
        transform="translate(-250, 0)"
      >
        <path
          class="domain"
          d="M6,-29.5H0.5V5.5H6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-29.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-26.583333333333332)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            500
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-23.666666666666668)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            1,000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-20.75)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            1,500
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-17.833333333333336)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            2,000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-14.916666666666666)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            2,500
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-12)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            3,000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-9.083333333333332)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            3,500
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-6.166666666666668)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            4,000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-3.25)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            4,500
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-0.33333333333333215)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            5,000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,2.5833333333333286)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            5,500
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,5.5)"
        >
          <line
            stroke="currentColor"
            x2="6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="9"
          >
            6,000
          </text>
        </g>
      </g>
      <foreignobject
        height="150"
        width="250"
        x="-203"
        y="150"
      >
        <form>
          <label
            for="averageOver"
            style="display: block;"
          >
            <input
              data-testid="averageSlider"
              max="28"
              min="3"
              name="averageOver"
              type="range"
              value="21"
            />
          </label>
        </form>
      </foreignobject>
      <path
        d="M-250,-30 -250,0"
        pointer-events="none"
        stroke="black"
        stroke-width="1px"
      />
      <foreignobject
        height="150"
        width="-270"
        x="20"
        y="-10"
      >
        <form>
          <input
            max="1"
            min="0"
            style="width: -272px;"
            type="range"
            value="1"
          />
        </form>
      </foreignobject>
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
